--- a/Signup_Design/index.html
+++ b/Signup_Design/index.html
@@ -6,8 +6,12 @@
   <title>SignUp Design</title>
 </head>
 <body>
+  <div class="sheen">
+    <div class="lightbox"></div>
+    <div class="lightbox"></div>
+  </div>
  <div class="container">
-
+  
  </div> 
 </body>
 </html>
